classDiagram
    class Student {
        <<TypeScript Interface>>
        +string id
        +number age_at_enrollment
        +string gender
        +number total_units_approved
        +number average_grade
        +number total_units_evaluated
        +number total_units_enrolled
        +number previous_qualification_grade
        +boolean tuition_fees_up_to_date
        +boolean scholarship_holder
        +boolean debtor
        +string uploaded_by
        +string created_at?
        +string updated_at?
        +number risk_score?
        +string risk_category?
        +string last_prediction_date?
    }
    
    class StudentCreate {
        <<TypeScript Interface>>
        +number age_at_enrollment
        +string gender
        +number total_units_approved
        +number average_grade
        +number total_units_evaluated
        +number total_units_enrolled
        +number previous_qualification_grade
        +boolean tuition_fees_up_to_date
        +boolean scholarship_holder
        +boolean debtor
        +string uploaded_by
    }
    
    class StudentWithPrediction {
        <<TypeScript Interface>>
        +string id
        +number age_at_enrollment
        +string gender
        +number total_units_approved
        +number average_grade
        +number total_units_evaluated
        +number total_units_enrolled
        +number previous_qualification_grade
        +boolean tuition_fees_up_to_date
        +boolean scholarship_holder
        +boolean debtor
        +string uploaded_by
        +string created_at
        +number risk_score
        +string risk_category
        +string prediction_label
        +string last_prediction_date
    }
    
    class PredictionLog {
        <<TypeScript Interface>>
        +string id
        +string student_id
        +number risk_score
        +string risk_category
        +string created_at
        +string created_by?
    }
    
    class FeatureImpact {
        <<TypeScript Interface>>
        +string feature
        +number|string|boolean original_value
        +number preprocessed_value
        +number dropout_impact
        +number graduate_impact
        +string interpretation
    }
    
    class PredictionWithExplanationResponse {
        <<TypeScript Interface>>
        +object prediction
        +object explanation
    }
    
    class PredictionApiService {
        <<TypeScript Service>>
        +predictWithExplanation(input: PredictionFormData)
        +createStudentWithPrediction(data: StudentCreate)
        +fetchAtRiskStudents(skip: number, limit: number)
        +fetchStudents(skip: number, limit: number)
    }
    
    PredictionApiService --> Student : returns
    PredictionApiService --> StudentWithPrediction : returns
    PredictionApiService --> PredictionWithExplanationResponse : returns
    PredictionWithExplanationResponse --> FeatureImpact : contains

